fix: TreeSelect and Transfer CheckboxGroup row-gap bug #1073 (#1084)

--- a/packages/semi-foundation/tree/tree.scss
+++ b/packages/semi-foundation/tree/tree.scss
@@ -254,6 +254,10 @@ $module: #{$prefix}-tree;
         user-select: none;
         cursor: not-allowed;
     }
+
+    .#{$prefix}-checkboxGroup-vertical {
+        row-gap: 0;
+    }
 }
 
 .#{$module}-option-list-block {
